[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "service-common"
version = "0.1.0"
description = "Shared FastAPI microservice utilities (tracing, errors, retries)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py311"]
