[build-system]
requires = ["setuptools>=69.0", "wheel>=0.43.0"]
build-backend = "setuptools.build_meta"

[project]
name = "service-common"
version = "0.1.0"
description = "Shared FastAPI microservice utilities (tracing, errors, retries)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
]

authors = [{ name = "Maco Dispatch" }]
license = "LicenseRef-Proprietary"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
service_common = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py311"]
